# nero-workcell

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: eye_in_hand_calibration.json  eye_to_hand_calibration.json
docs/: agx_gripper-API.md  jacobian_and_differential_ik.md  minimum_jerk.md  nero-API.md  revo2-API.md
src/nero_workcell/core/: __init__.py  approach_planner.py  arm_controller.py  cartesian_trajectory.py  differential_ik_follower.py  kinematics_model.py  nero_controller.py  nero_pinocchio_model.py  realsense_camera.py  robot_state.py  target_object.py
src/nero_workcell/eye_in_hand/: collect_data.py
src/nero_workcell/eye_to_hand/: collect_data.py  config.json
src/nero_workcell/tasks/: follow_static_target.py  object_follower_3d.py
src/nero_workcell/utils/: common.py
tests/: test_approach_planner.py  test_arm_controller_real.py  test_differential_ik_follower_real.py  test_kinematics_model_real.py  test_nero_controller_real.py
tools/: get_arm_pose_joints.py  get_chessboard_position.py  move_home.py  realsense_depth_align.py  yolo_coco_detector.py
