[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nero-workcell"
version = "0.1.0"
description = "Nero workcell toolkit for RealSense, calibration, and robot tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "opencv-python",
    "scipy",
    "pyrealsense2",
    "ultralytics",
    "python-can>3.3.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
